--- a/FRONT-END/Sobre_nosotros/nosotros.html
+++ b/FRONT-END/Sobre_nosotros/nosotros.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary" style="position: fixed;">
-            <a href="../home/index.html" class="fa-solid fa-arrow-left" style="font-size: 30px; color: black;">
+            <a href="../home/index.html" class="fa-solid fa-arrow-left" style="font-size: 30px; color: black; text-decoration: none;">
               <img src="../home/img/KuenteCO.jpeg" width="170" class="navbar-brand" alt="Logo">
             </a>
           </nav>
